# ShapeDetection

./: ImageUtils.py  ShapeUtils.py  convertToDb.py  detectshapes.py  main.py  numberdetection.py  numberdetection_old.py  officialshapedetection.py  pyproject.toml  shapedetector.py  textdetection.py
output/: test.pvdb
templates/: test without flange INCH UNITS.sql
