[tool.poetry]
name = "shape-detection"
version = "0.1.0"
description = ""
authors = ["SravanKumarL <sravan.kumar0351@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.1"
imutils = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
